no-jira: french translation

--- a/src/main/java/org/olat/admin/layout/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/admin/layout/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Sun Dec 14 17:23:30 CET 2014
+#Thu Feb 01 22:20:11 CET 2018
 CustomizingAdminController.menu.title=Personnaliser la mise-en-page
 CustomizingAdminController.menu.title.alt=T\u00E9l\u00E9charger un logo et changer le pied de page.
 LayoutAdminControllerWithPersist.menu.title=Mise-en-page
@@ -16,6 +16,8 @@ footerLine.description=Texte du pied de page (liens e-mail et adresses sont auto
 footerUrl.default=http\://www.frentix.com
 footerUrl.description=Entrer l'URL pour les clics sur le pied-de-page (en option)
 form.theme=Mise en page syst\u00E8me
+form.theme.forceReload=Forcer le rechargement de toutes les ressources statiques
+form.theme.forceReload.help=Le rechargement est uniquement n\u00E9cessaire si des modifications ont \u00E9t\u00E9 apport\u00E9es \u00E0 une mise en page qui a d\u00E9j\u00E0 \u00E9t\u00E9 t\u00E9l\u00E9charg\u00E9e.
 invitee=invit\u00E9(e)
 layout.intro=Par la suite, vous pouvez exp\u00E9rimenter avec les th\u00E8mes de mise en page mises \u00E0 disposition. Choisissez un sujet dans la liste pour l'utiliser. Pour activer les modifications d'affichage, vous devez vous d\u00E9connecter et vous reconnecter sur OLAT.
 layout.title=Mise en page
