--- a/src/main/java/org/olat/core/gui/components/form/flexible/impl/elements/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/core/gui/components/form/flexible/impl/elements/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Wed Sep 14 18:05:16 CEST 2016
+#Thu Feb 01 18:31:27 CET 2018
 confirm.delete.file=Voulez-vous vraiment effacer ce fichier?
 confirm.delete.file.title=Effacer un fichier
 day.short.di=Mar
@@ -27,6 +27,7 @@ month.long.mar=Mars
 month.long.nov=Novembre
 month.long.oct=Octobre
 month.long.sep=Septembre
+selection.no.value=-
 text.element.error.maxvalue=valeur maximale autoris\u00E9e\: {0}.
 text.element.error.minvalue=valeur minimale autoris\u00E9e\: {0}.
 text.element.error.notlongerthan=max. {0} signes autoris\u00E9s.
