--- a/src/main/java/org/olat/core/util/i18n/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/core/util/i18n/ui/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Sat Oct 26 20:39:05 CEST 2013
+#Thu Feb 01 18:32:11 CET 2018
 cache.disabled=La m\u00E9moire cache de traduction n'est pas activ\u00E9. Ce r\u00E9glage doit \u00EAtre effectu\u00E9 dans le fichier olat.properties . Nous recommandons d'activer la m\u00E9moire cache.
 cache.flush=Effacer m\u00E9moire cache
 cache.flush.ok=La m\u00E9moire cache a \u00E9t\u00E9 vid\u00E9e.
@@ -83,6 +83,7 @@ edit.crumb.link=Cl\u00E9 de traduction
 edit.customize.crumb.hoover=Formulaire pour la traduction d'une cl\u00E9 de traduction
 edit.customize.intro=Copiez ce terme depuis la langue vers l'adaptation et modifiez le terme selon vos souhaits. Vous pouvez \u00E9galement sauter le terme et l'adapter plus t\u00E2rd. Affichez la langue de comparaison, pour v\u00E9rifier vos modifications dans une autre langue.
 edit.customize.target.hover=Cliquez dans le champ d'entr\u00E9e pour adapter cette cl\u00E9.
+edit.error.invalid.item=La traduction n'est pas valide\: {0}
 edit.error.noitem=Aucune cl\u00E9 de traduction n'a \u00E9t\u00E9 trouv\u00E9e. Retournez \u00E0 l'aper\u00E7u et r\u00E9essayez.
 edit.intro=Traduisez le terme depuis la langue de r\u00E9f\u00E9rence dans la langue cible. Vous pouvez aussi sauter le terme et traduire plus tard. Afficher la langue de comparaison pour v\u00E9rifier votre traduction dans une autre langue.
 edit.progressBar.unitLabel=Cl\u00E9 de traduction
