--- a/src/main/java/org/olat/core/util/mail/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/core/util/mail/_i18n/LocalStrings_fr.properties
@@ -1,6 +1,7 @@
-#Thu Nov 16 16:54:08 CET 2017
+#Thu Feb 01 18:31:51 CET 2018
 add.email=Ajouter
 contact.cp.from=Copie \u00E0 l'exp\u00E9diteur
+error.too.long=Le mod\u00E8le est trop grand. La taille maximale est {0}\!
 footer.no.userdata=<p>Ce message a \u00E9t\u00E9 envoy\u00E9 automatiquement via la plateforme d'apprentissage OpenOLAT\: {0}</p>
 footer.with.userdata=<p>Exp\u00E9diteur\: {2} {3} ({0}), {4} {5}</p><p>Ce message a \u00E9t\u00E9 envoy\u00E9 via la plateforme d'apprentissage OpenOLAT\: {1}</p>
 mail.action.emtpy=S\u00E9lectionnez au moins une adresse e-mail pour d\u00E9clencher un effet.
