--- a/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,6 @@
-#Thu Jun 08 21:28:13 CEST 2017
+#Thu Feb 01 22:06:36 CET 2018
+assessment.mode.now=Le mode d'\u00E9valuation est actif.
+assessment.modes.overview=Mode d'\u00E9valuation
 assessment.status.done=$org.olat.modules.assessment.ui\:assessment.status.done
 assessment.status.inProgress=$org.olat.modules.assessment.ui\:assessment.status.inProgress
 assessment.status.inReview=$org.olat.modules.assessment.ui\:assessment.status.inReview
@@ -41,11 +43,13 @@ overview=Aper\u00E7u
 participantgroups.title=Participant des groupes
 previous=Retour
 reopen=$org.olat.modules.assessment.ui\:reopen
+reset.attempts=R\u00E9initialiser le nombre de tentatives
 save.done=$org.olat.modules.assessment.ui\:save.done
 statistics.small.overview=$org.olat.modules.assessment.ui\:statistics.small.overview
 sub.details=D\u00E9tails
 table.entries=Entr\u00E9es
 table.header.assessmentStatus=$org.olat.modules.assessment.ui\:table.header.assessmentStatus
+table.header.completion=$org.olat.modules.assessment.ui\:table.header.completion
 table.header.description=Description
 table.header.elements.toReview=El\u00E9ment
 table.header.group.name=Noms
@@ -63,6 +67,12 @@ table.header.tools=$org.olat.modules.assessment.ui\:table.header.tools
 table.header.userVisibility=<i class\='o_icon o_icon-fw o_icon_results_hidden'> </i>
 title.infocoach=Informations sur l'\u00E9valuation
 tool.correction=Corriger
+tool.details=Montrer les d\u00E9tails / \u00E9valuer
+tool.reopen=R\u00E9ouvrir l'\u00E9valuation
+tool.reset.attempts=R\u00E9initialiser le nombre de tentatives
+tool.set.done=Mettre le status "clos"
+tool.set.not.visible=Rendre les r\u00E9sultats non visibles
+tool.set.visible=Rendre les r\u00E9sultats visibles
 tooltip.of={0} \u00E0 {1}
 user.visibility=R\u00E9sultats
 user.visibility.hidden=pas encore visible pour les utilisateurs
