--- a/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_fr.properties
@@ -1,26 +1,20 @@
-#Sat Jun 06 12:03:17 CEST 2015
+#Thu Feb 01 18:35:11 CET 2018
 add.all=Ajouter toutes les permissions
 bgr.archive=Archivage des donn\u00E9es
 bgr.assess=Outil d'\u00E9valuation
+bgr.assessmode=Mode d'\u00E9valuation
 bgr.dbs=Base de donn\u00E9e du cours
 bgr.editor=Editeur de cours
 bgr.glossary=Outil glossaire
 bgr.groupmngt=Gestion de groupes
 bgr.membermngt=Gestion des membres
 bgr.statistics=Statistiques
-
-
-
-
-
-
-
-
-
 menu.rights=Permissions
 noRestriction=Aucune restriction
 participant=Participants
 remove.all=Effacer toutes les permissions
+repo.participant=Participant du cours
+repo.tutor=Coach du cours
 table.header.groups=Groupe
 table.header.remove=Effacer
 table.header.role=R\u00F4les
