--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Thu Nov 30 09:44:19 CET 2017
+#Thu Feb 01 18:23:01 CET 2018
 actualPoints=$org.olat.modules.iq\:actualPoints
 admin.12.title=Configuration QTI 1.2
 admin.menu.title=QTI 2.1
@@ -112,6 +112,7 @@ error.integer=Format de nombre inad\u00E9quat. Exemple\: 15, 5, 1
 error.mimetype=$org.olat.core.commons.modules.bc\:WrongMimeType
 error.reload.question=Une erreur inattendue s'est produite. Veuillez v\u00E9rifiez la r\u00E9ponse que vous avez donn\u00E9 \u00E0 la question et sauvez-la \u00E0 nouveau.
 error.required.format=Votre entr\u00E9e ne correspond pas au format requis.
+error.test.closed=Le test est termin\u00E9
 error.textEntry.invalid=Votre entr\u00E9e doit \u00EAtre un {0} valide.
 error.textEntry.invalid.float=Votre entr\u00E9e doit \u00EAtre un nombre {0} valide avec une virgule ou un point comme s\u00E9parateur d\u00E9cimal.
 error.textEntry.invalid.record=Votre entr\u00E9e doit un nombre valide.
