--- a/src/main/java/org/olat/login/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/login/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Tue Aug 15 17:29:04 CEST 2017
+#Thu Feb 01 18:37:13 CET 2018
 about.copyright=Copyright et participations
 about.custom=
 about.custom.title=
@@ -116,6 +116,7 @@ timeout.message=Votre session a expir\u00E9 ou le serveur a \u00E9t\u00E9 red\u0
 timeout.title=Expiration de la session
 topnav.help=Aide
 topnav.help.alt=D\u00E9marrer l'aide de OpenOLAT
+warning.old.browser=La version de votre butineur n'est plus support\u00E9e. Veuillez mettre \u00E0 jour votre butineur pour qu'OpenOLAT fonctionne sans accroc. Vous trouverez plus d'information dans le manual\: <a href\="{0}" target\="_blank">Manuel d'utilisation</a>.
 wayf.homesite=Institution
 wayf.intro=Veuillez choisir votre institution.<br>Vous allez \u00EAtre redirig\u00E9(e) pour l'authentification.
 wayf.pleasechoose=Veuillez choisir votre institution...
