--- a/src/main/java/org/olat/modules/assessment/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/assessment/ui/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Fri Sep 23 11:41:35 CEST 2016
+#Thu Feb 01 18:26:00 CET 2018
 assessment.status.done=Evalu\u00E9
 assessment.status.inProgress=D\u00E9marr\u00E9
 assessment.status.inReview=A passer en revue
@@ -24,9 +24,11 @@ filter.passed=R\u00E9ussi
 index.introduction=Evaluez les participants de ce test avec l'outil d'\u00E9valuation. Il vous permettra d'acc\u00E9der aux r\u00E9sultats des tests et de les modifier.
 reopen=R\u00E9ouvrir
 review=Passer en revue
+run.ended=Termin\u00E9
 save.done=Sauver comme compl\u00E9t\u00E9
 statistics.small.overview=Aper\u00E7u statistiques
 table.header.assessmentStatus=Status
+table.header.completion=Progression
 table.header.elements.toReview=Passer en revue
 table.header.name=Nom d'utilisateur
 table.header.numOfAssessedIdentities=\# participants
