--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Thu Nov 16 16:51:38 CET 2017
+#Thu Feb 01 21:29:46 CET 2018
 access=Acc\u00E8s
 access.binder=Les personnes suivantes ont acc\u00E8s au classeur\:
 access.rights=Ajouter un droit d'acc\u00E8s
@@ -72,6 +72,7 @@ binder.num.sections.pages={0} sections avec un total de {1} entr\u00E9es
 binder.status=Status
 binder.title=Portfolio {0}
 binders=Classeurs
+bookmark=Favori
 categories=Cat\u00E9gories
 categories.add=Ajouter des cat\u00E9gories
 categories.hint=Entrer le texte de la cat\u00E9gorie et passer "Entrez" pour cr\u00E9er la cat\u00E9gorie d\u00E9sir\u00E9e.
@@ -91,6 +92,8 @@ comment.several={0} commentaires
 comment.title=Commentaires
 comment.zero=Pas encore de commentaires
 compare.evaluations=Evaluation
+confirm.close.page=Voulez-vous clore cette contribution? Cette contribution sera clos pour l'apprenant.
+confirm.close.page.other.coaches=Les personnes suivantes ont acc\u00E8s \u00E0 la contribution\:
 confirmation=Confirmation
 create.binder=Cr\u00E9er un classeur
 create.empty.binder=Nouveau classeur vide
@@ -162,6 +165,7 @@ export.page=Exporter la page
 export.page.onepage=En une page
 export.page.pdf=Exporter la page au format PDF
 fileupload=Image du titre
+filter.sections.empty=Pas de sections ouvertes
 filter.show.all=Tout affichez
 firstName=Pr\u00E9nom
 go.to.trash=Aller \u00E0 la poubelle
@@ -189,6 +193,8 @@ invitation.mail.success=Les personnes invit\u00E9es ont \u00E9t\u00E9 inform\u00
 issue=Edition
 language=Langue
 lastName=Nom de famille
+leave=Enlever
+leave.explain=Voulez-vous enlever le classeur? Vous n'y aurez plus acc\u00E8s. Pour obtenir \u00E0 nouveau un acc\u00E8s, le propri\u00E9taire du classeur devra vous en accorder l'acc\u00E8s \u00E0 nouveau.
 mail=Courriel
 mail.body=Message
 mail.subject=Sujet
@@ -326,6 +332,9 @@ section.up=Vers le haut
 select.form=S\u00E9lectionner un questionnaire
 select.mymap=$org.olat.course.nodes.portfolio\:select.mymap
 series=S\u00E9ries
+shared.binders=Classeurs
+shared.bookmarks=Favoris
+shared.entries=Contributions / \u00E0 faire
 shared.with.me=Partag\u00E9 avec moi
 shared.with.me.text=Une liste de classeurs que d'autres personnes partagent avec vous.
 show.help.binder=Aide
@@ -340,6 +349,9 @@ status.inRevision=$\:status.in.revision
 status.not.started=pas commenc\u00E9
 status.published=publi\u00E9
 status.submitted=soumis
+status.user.done=Fait
+status.user.inProcess=En cours
+status.user.incoming=Nouveau
 summary=R\u00E9sum\u00E9
 summary.placeholder=Court r\u00E9sum\u00E9 du contenu de la contribution
 table.grading.failed.points=<span class\="o_state o_failed"><i class\="o_icon o_icon_failed"> </i> {0} Point(s)</span>
@@ -348,14 +360,19 @@ table.grading.passed.points=<span class\="o_state o_passed"><i class\="o_icon o_
 table.grading.points={0} point(s)
 table.header.categories=Cat\u00E9gories
 table.header.change.status=Status
+table.header.closed=Clos
 table.header.collection.date=Collect\u00E9 le
 table.header.course=Cours
 table.header.course.node=El\u00E9ment de cours
 table.header.date=Date
 table.header.down=<i class\='o_icon o_icon o_icon-lg o_icon_move_down'> </i>
+table.header.draft=$\:status.draft
 table.header.grading=Evaluation
+table.header.inRevision=$\:status.in.revision
 table.header.key=ID
 table.header.lastUpdate=Derni\u00E8re mise-\u00E0-jour
+table.header.mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Favori"> </i>
+table.header.new=Nouveau
 table.header.numpages=\# Contributions
 table.header.open=D\u00E9marrer
 table.header.open.sections=Ouvrir
