--- a/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Fri Nov 17 12:09:10 CET 2017
+#Thu Feb 01 22:02:52 CET 2018
 QuestionItemImpl=Question
 actions=Actions
 add.competence.have=Ajouter "$\:have"
@@ -14,6 +14,7 @@ admin.configuration.title=Configuration taxonomie
 admin.menu.title=Taxonomie
 admin.menu.title.alt=Taxonomie
 admin.taxonomy.trees=Taxonomie
+assign.type=Attribuer
 atleast.one.competence=Vous devez choisir au moins une comp\u00E9tence que vous pouvez \u00E9diter.
 confirm.delete.level.type.sucessfull=Le type de niveau "{0}" a \u00E9t\u00E9 effac\u00E9.
 confirm.deleted.level=Le niveau "{0}" de la taxonomie a \u00E9t\u00E9 effac\u00E9.
@@ -49,6 +50,8 @@ level.type.docs.enabled=Activer le dossier documents
 level.visible=Visible
 manage=G\u00E9rer
 move.taxonomy.level=D\u00E9placer
+move.taxonomy.level.title=D\u00E9placer "{0}"
+move.taxonomy.levels.title=D\u00E9placer
 my.taxonomies=Ma taxonomie
 not.configured=Pas encore configur\u00E9e\! Configurer d'abord une taxonomie dans la partie administration.
 not.implemented=Not implemented
@@ -56,6 +59,7 @@ open.taxonomy=montrer / \u00E9diter
 remove=Enlever
 selected.taxonomy.qpool=Taxonomie pour la banque de questions
 selected.taxonomy.tree=Taxonomie pour la banque de documents
+show.all=Tout montrer
 table.competence.empty=Il n'y a pas encore de comp\u00E9tences attribu\u00E9es pour ce niveau de la taxonomie
 table.header.actions=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.competence.achievement=Accomplissement
@@ -72,15 +76,18 @@ table.header.taxonomy.level.displayName=Nom
 table.header.taxonomy.level.externalId=R\u00E9f. ext. niveau
 table.header.taxonomy.level.identifier=Identifiant
 table.header.taxonomy.level.num.children=Nombre
+table.header.taxonomy.level.type=Type de niveau
 table.header.taxonomy.level.type.identifier=Type du niveau
 table.header.type.displayName=Nom
 table.header.type.identifier=Identifiant
 table.relations.empty=Il n'y a pas encore de relations \u00E0 ce niveau de la taxonomie.
 table.taxonomy.empty=Il n'existe pas encore de taxonomie. Pour utiliser la banque de documents, la banque de questions ou les comp\u00E9tences, vous devez d'abord cr\u00E9er une taxonomie.
+table.taxonomy.level.empty=Il n'y a pas de niveau disponible.
 table.taxonomy.level.type.empty=Il n'y pas encore de type de niveaux de la taxonomie. Pour utiliser la banque de documents ou la banque de questions, vous devez d\u00E9finir des types \u00E0 attribuer aux niveaux de la taxonomie.
 target=A atteindre
 target.can.read="$\:target" autoriser en lecture
 taxonomy.admin.enabled=Activer taxonomie
+taxonomy.competence.expiration=Expiration
 taxonomy.competence.fullName=Nom
 taxonomy.competence.type=Comp\u00E9tence
 taxonomy.description=Description
@@ -107,5 +114,8 @@ taxonomy.metadata=M\u00E9tadonn\u00E9es
 taxonomy.types=Types de niveaux
 teach=Enseigner
 tools=$\:table.header.actions
+type.taxonomy.level=Attribuer un type de niveau
+warning.atleastone.level=Vous devez s\u00E9lectionner au moins un niveau que vous pouvez \u00E9diter.
+warning.atleastone.level.competence=Vous devez s\u00E9lectionner au moins un niveau.
 warning.delete.level=Ce niveau de la taxonomie ne peut pas \u00EAtre effac\u00E9 car il est encore utilis\u00E9.
 warning.delete.level.type=Le niveau de la taxonomie n'a pas \u00E9t\u00E9 effac\u00E9 car il est encore utilis\u00E9.
