--- a/src/main/java/org/olat/search/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/search/ui/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Fri Nov 17 12:07:55 CET 2017
+#Thu Feb 01 18:38:42 CET 2018
 DocumentPool=Banque de documents
 EPSite=Portfolio
 HomeSite=Home
@@ -6,6 +6,7 @@ LibrarySite=Biblioth\u00E8que
 Portfolio=Portfolio
 Taxonomy=Taxonomie
 TaxonomyLevel=Niveau de la taxonomie
+Templates=Mod\u00E8le
 all.search.result.title=tous les {0} r\u00E9sultats 
 area.blogs=Blogue/podcast
 area.courses=Cours
