--- a/src/main/java/org/olat/admin/security/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/admin/security/_i18n/LocalStrings_fr.properties
@@ -1,10 +1,10 @@
-#Tue Apr 15 21:59:54 CEST 2014
+#Thu Feb 01 22:21:50 CET 2018
 admin.menu.title=S\u00E9curit\u00E9
 admin.menu.title.alt=Modifier les param\u00E8tres de s\u00E9curit\u00E9
 sec.description=S\u00E9curit\u00E9
 sec.force.download=Forcer le t\u00E9l\u00E9chargement dans les dossiers
 sec.title=Param\u00E8tres de s\u00E9curit\u00E9
+sec.top.frame.explanation=En raison d'incompatibilit\u00E9s avec certains composants d'OpenOLAT (TinyMCE), il n'est pas possible d'int\u00E9grer OpenOLAT dans une frame.
 sec.topframe=Emp\u00EAcher l'int\u00E9gration dans les cadres/frames
 sec.wiki=Bloquer la resource de type wiki
-sec.top.frame.explanation=En raison d'incompatibilit\u00E9s avec certains composants d'OpenOLAT (TinyMCE), il n'est pas possible d'int\u00E9grer OpenOLAT dans une frame.
-
+sec.xframe.sameorigin=Interdire l'encadrant dans une frame avec l'en-t\u00EAte "X-FRAME-OPTIONS\=SAMEDOMAIN"
