--- a/src/main/java/org/olat/admin/site/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/admin/site/ui/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Thu Nov 16 20:28:37 CET 2017
+#Thu Feb 01 18:38:36 CET 2018
 AdminSiteDef=Administration
 CatalogAdminSiteDef=Administration du catalogue
 CatalogSiteDef=Catalogue
@@ -30,6 +30,7 @@ disabledSiteSecurityCallback=D\u00E9sactiv\u00E9
 down=En bas
 managersSiteSecurityCallback=Tous les administrateurs
 poolPrivateMembersSiteSecurityCallback=Membres et administrateurs de pools de questions
+poolTaxonomySiteSecurityCallback=Administrateurs banque de questions et comp\u00E9tences
 registredOrGuestSiteSecurityCallback=Utilisateurs enregistr\u00E9 et invit\u00E9s sans invitations portfolio
 registredSiteSecurityCallback=Utilisateurs enregistr\u00E9s sauf les invit\u00E9 / les invitations eP
 restrictToAuthorSiteSecurityCallback=Auteurs
