--- a/src/main/java/org/olat/core/commons/chiefcontrollers/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/core/commons/chiefcontrollers/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Thu Nov 16 19:06:40 CET 2017
+#Thu Feb 01 18:31:22 CET 2018
 AssessmentManager=Outil d'\u00E9valuation
 Binder=ePortfolio 2.0
 BinderTemplate=Mod\u00E8le de portfolio 2.0
@@ -47,6 +47,7 @@ PFCourseNode=Dossier participant
 ReturnboxController=Dossier de restitution
 SolutionController=Solutions mod\u00E8les
 TaxonomyLibrary=Biblioth\u00E8que de taxonomie
+Templates=Mod\u00E8le
 User=Utilisateur
 WikiPage=Wiki
 ajax.show.on=[Ajax-Beta-Mode]
