--- a/src/main/java/org/olat/core/commons/controllers/filechooser/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/core/commons/controllers/filechooser/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Thu Feb 26 21:09:16 CET 2015
+#Thu Feb 01 18:19:42 CET 2018
 button.create=Cr\u00E9er
 calloutTrigerLink.select.site=Choisir une page
 calloutTriggerLink=Choisir, cr\u00E9er, t\u00E9l\u00E9charger un fichier
@@ -7,6 +7,7 @@ chooseLink=Choisir un fichier
 command.create=Cr\u00E9er une page et l'ouvrir dans l'\u00E9diteur
 command.edit=Ouvrir la page dans l'\u00E9diteur
 command.preview.label=Choisir un fichier
+command.remove=Enlever la page
 createLink=Cr\u00E9er un fichier
 error.deleted=Le fichier configur\u00E9 n'existe pas. Cr\u00E9er \u00E0 nouveau le fichier ou choisissez un autre fichier.
 error.name.empty=S'il vous pla\u00EEt entrez un nom de fichier
