--- a/src/main/java/org/olat/course/archiver/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/archiver/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Thu Jun 08 21:24:36 CEST 2017
+#Thu Feb 01 18:33:31 CET 2018
 checklist=Listes de contr\u00F4le
 cl=Listes de contr\u00F4le
 cmd.download=T\u00E9l\u00E9charger
@@ -81,6 +81,7 @@ menu.scorm.alt=R\u00E9sultats SCORM
 menu.wikis=Wikis
 menu.wikis.alt=Archiver Wikis
 nodechoose.config.error=Choisissez s'il vous pla\u00EEt au moins une option.
+nodechoose.intro.checklist=S\u00E9lectionner un \u00E9l\u00E9ment de cours pour archiver les r\u00E9sultats des listes de contr\u00F4les.
 nodechoose.intro.cl=S\u00E9lectionnez avec le dialogue suivant l'\u00E9l\u00E9ment de cours liste de contr\u00F4le que vous souhaitez \u00E9valuer.
 nodechoose.intro.config=L'archive contient\: tous les utilisateurs et toutes les questions. Modifier les options de t\u00E9l\u00E9chargement avec le bouton ci-dessus.
 nodechoose.intro.dialog=S\u00E9lectionnez un \u00E9l\u00E9ment de cours pour archiver ses discussions de fichiers.
