--- a/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Thu Jun 08 20:30:59 CEST 2017
+#Thu Feb 01 22:07:04 CET 2018
 add.checkbox=Ajouter une case \u00E0 cocher
 assessment=Evaluation
 assessment.checkbox.description=Modifier en fonction de la case \u00E0 cocher\: modifier la case \u00E0 cocher s\u00E9lectionner gr\u00E2ce au filtre de tous les participants.
@@ -19,6 +19,7 @@ column.header.homepage=Page d'accueil
 column.header.node.passed=Element de cours r\u00E9ussi
 column.header.node.points=Points \u00E9l\u00E9ment de cours
 column.header.points=$\:box.points
+column.header.seqnum=Num\u00E9ro
 comment.nocomment=$org.olat.course.nodes.ms\:comment.nocomment
 comment.title=$org.olat.course.nodes.ms\:comment.title
 condition.accessibility.title=Acc\u00E8s
