--- a/src/main/java/org/olat/modules/docpool/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/docpool/ui/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Fri Nov 17 11:56:26 CET 2017
+#Thu Feb 01 18:27:02 CET 2018
 admin.description=La banque de documents propose une biblioth\u00E8que de documents structur\u00E9 automatiquement sur la base d'une taxonomie et des comp\u00E9tences.
 admin.menu.title=Banque de documents
 admin.menu.title.alt=Banque de documents
@@ -34,3 +34,4 @@ teach.can.read.parent.levels.explain.1=Autoriser l'acc\u00E8s en lecture des
 teach.can.read.parent.levels.explain.2=niveaux au-dessus
 teach.can.write=Autoriser l'acc\u00E8s en \u00E9criture
 teach.competence=Comp\u00E9tence enseignement
+warning.taxonomy.index.emtpy=La page d'informations de la banque de documents n'a pas \u00E9t\u00E9 configur\u00E9e. Demandez, s'il-vous-pla\u00EEt, \u00E0 l'administrateur syst\u00E8me d'en mettre une \u00E0 disposition des utilisateurs.
