--- a/src/main/java/org/olat/modules/video/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/video/ui/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Thu Mar 09 17:09:13 CET 2017
+#Thu Feb 01 18:30:54 CET 2018
 add.track=Ajouter sous-titre
 admin.config.enable=Activ\u00E9 la resource de type vid\u00E9o
 admin.config.hint=Voulez-vous vraiment d\u00E9sactiver le transcodage vid\u00E9o?
@@ -76,9 +76,9 @@ track.table.header.file=Fichier
 track.table.header.language=Langue
 track.table.label=Sous-titres
 track.upload=T\u00E9l\u00E9charger
+track.upload.error.filetype=Pour les sous-titres, seuls les fichiers au format WebVTT avec le suffixe .srt sont support\u00E9s.
 track.upload.error.nofile=Choisissez un fichier s'il vous pla\u00EEt.
 track.upload.error.nolang=Choisissez une langue de la liste
-track.upload.error.filetype=Pour les sous-titres, seuls les fichiers au format WebVTT avec le suffixe .srt sont support\u00E9s.
 transcoding.error=Master endommag\u00E9
 transcoding.inefficient=Qualit\u00E9 m\u00E9diocre
 transcoding.processing=En cours
@@ -121,3 +121,4 @@ video.not.replaced=Le fichier vid\u00E9o n'a pas pu \u00EAtre remplac\u00E9. Cho
 video.replace.desc=Veuillez choisir un fichier vid\u00E9o sur votre ordinateur et cliquer le bouton "Remplacer la vid\u00E9o" pour remplacer l'ancien.
 video.replace.upload=Fichier vid\u00E9o
 video.replaced=Le fichier vid\u00E9o a \u00E9t\u00E9 remplac\u00E9 et il sera transcod\u00E9 pour obtenir les diff\u00E9rentes r\u00E9solutions configur\u00E9es.
+warning.no.poster.proposals=Un aper\u00E7u n'a pas pu \u00EAtre g\u00E9n\u00E9r\u00E9.
