--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Tue Aug 15 17:30:54 CEST 2017
+#Thu Feb 01 18:37:37 CET 2018
 BinderTemplate=Mod\u00E8le de portfolio 2.0
 CourseModule=Cours
 EPStructuredMapTemplate=Mod\u00E8le de portfolio
@@ -140,6 +140,10 @@ cif.private.dates=Date
 cif.public.dates=Semestre
 cif.requirements=Exigences
 cif.resourcename=Nom de fichier
+cif.resources.status=Cours
+cif.resources.status.active=Actif
+cif.resources.status.all=Tous
+cif.resources.status.closed=Termin\u00E9
 cif.softkey=OpenOLAT-Soft-ID
 cif.type=Type
 cif.type.na=pas d'indication
