no-jira: french translation

--- a/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_de.properties
@@ -20,7 +20,7 @@ choosed.areas=Lernbereich
 choosed.groups=Gruppe
 coach.assessment=Bewerten
 coach.back.to.submission=Abgabe erneut \u00F6ffnen
-coach.back.to.submission.confirm.text=Sind Sie sicher dass Sie die Abgabe f\u00FCr "{0}" nochmals \u00F6ffnen m\u00F6chten?
+coach.back.to.submission.confirm.text=Sind Sie sicher dass Sie die Abgabe f\u00FCr "{0}" nochmals \u00F6ffnen m\u00F6chten? Es werden dabei <strong>alle bereits eingereichten Dokumente</strong> gelöscht. Trotzdem weiterfahren?
 coach.back.to.submission.confirm.title=Abgabe erneut \u00F6ffnen
 coach.back.to.submission.desc=Hat der Teilnehmer versehentlich die endg\u00FCltige Abgabe ausgel\u00F6st, so kann mit dieser Aktion der Status auf "nicht abgegeben" zur\u00FCckgesetzt werden.
 coach.close.revision.button=Revision akzeptieren
