--- a/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_fr.properties
@@ -20,7 +20,7 @@ choosed.areas=Domaines d'\u00E9tudes
 choosed.groups=Groupes
 coach.assessment=Evaluer
 coach.back.to.submission=R\u00E9ouvrir la soumission
-coach.back.to.submission.confirm.text=Etes-vous s\u00FBr de rouvrirez la soumission du devoir pour "{0}"?
+coach.back.to.submission.confirm.text=Etes-vous s\u00FBr de rouvrirez la soumission du devoir pour "{0}"? Tous les documents déjà téléchargés seront <strong>effacés</strong>.
 coach.back.to.submission.confirm.title=R\u00E9ouvrir le d\u00E9p\u00F4t
 coach.back.to.submission.desc=Cette action permet d'annuler le d\u00E9p\u00F4t d'un devoir qu'un participant aurait involontairement rendu.
 coach.close.revision.button=Terminer le processus de r\u00E9vision
