--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Thu Feb 01 22:18:00 CET 2018
+#Fri Feb 02 08:45:52 CET 2018
 Intro.self=Pressez sur D\u00E9marrer pour commencer l'auto-test.
 Intro.surv=Pressez sur D\u00E9marrer pour commencer avec le questionnaire. 
 Intro.test=Pressez sur D\u00E9marrer pour commencer le test. 
@@ -149,6 +149,7 @@ qti.form.test.date.confirm=Le test peut \u00EAtre commencer pendant la p\u00E9ri
 qti.form.test.date.help=$\:qti.form.test.date.confirm
 qti.form.test.title=Test
 reopen=R\u00E9ouvrir
+reopen.explanation=Ce test a \u00E9t\u00E9 termin\u00E9. Vous pouvez r\u00E9ouvrir le test \u00E0 de nouvelles tentatives. Le participant pourra reprendre le test l\u00E0 o\u00F9 il s'est arr\u00EAt\u00E9. Si le nombre de tentatives est limit\u00E9es, peut-\u00EAtre devrez-vous \u00E9galement r\u00E9initialis\u00E9e le nombre de tentatives pour qu'il puisse reprendre le test.
 reopen.test=R\u00E9ouvrir un test d\u00E9j\u00E0 termin\u00E9
 replace.wizard.information.empty.results=<b>Indication\: ce test/questionnaire a d\u00E9j\u00E0 \u00E9t\u00E9 lanc\u00E9 par {0} participant/s\!</b> Tous les r\u00E9sultats d\u00E9j\u00E0 existants seront effac\u00E9s si vous cliquez sur "Terminer"au prochain pas.<br></br><b>Publiez votre cours le plus t\u00F4t possible\!</b> Les participants pourront lancer le nouveau test/questionnaire et les r\u00E9sultats pourront \u00EAtre enregistr\u00E9s seulement apr\u00E8s la publication.
 replace.wizard.information.paragraph1=<b>Indication\: ce test/questionnaire a d\u00E9j\u00E0 \u00E9t\u00E9 lanc\u00E9 par {0} participant/s et partiellement termin\u00E9\!</b> Tous les r\u00E9sultats d\u00E9j\u00E0 existants seront archiv\u00E9s si vous cliquez sur "Terminer" au prochain pas.<br></br> Les r\u00E9sultats archiv\u00E9s peuvent \u00EAtre t\u00E9l\u00E9charg\u00E9s ici\:<br />
