--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -216,7 +216,7 @@ process.rating.description=Bewerten Sie bitte die Frage. Jede Frage kann genau e
 process.rating.title=Beurteilung
 process.rating=Bewertung
 process.start.review.button=$\:process.activate.start.review
-process.start.review.description=Nach dem Start des Beurteilungsprozesses werden alle Bewertungen der Frage gel\u00F6scht und die Frage kann nicht mehr bearbeitet werden. Wollen Sie den Beurteilungsprozess f\u00FCr die Frage "{0}" wriklich starten?
+process.start.review.description=Nach dem Start des Beurteilungsprozesses werden alle Bewertungen der Frage gel\u00F6scht und die Frage kann nicht mehr bearbeitet werden. Wollen Sie den Beurteilungsprozess f\u00FCr die Frage "{0}" wirklich starten?
 process.start.review.taxonomy.level=$\:general.taxonomy.level
 process.start.review.title=$\:process.activate.start.review
 question=Itemanalyse
