--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Thu Feb 01 21:58:58 CET 2018
+#Fri Feb 02 08:33:46 CET 2018
 admin.configuration.title=Banque de questions
 admin.levels.intro=Cr\u00E9er les niveaux qui s'appliquent aux niveaux d'\u00E9ducation de votre organisation. Exemples de niveaux dans un contexte acad\u00E9mique pourrait \u00EAtre l'\u00E9cole primaire, coll\u00E8ge, lyc\u00E9e, bachelor, master. Dans le contexte d'une soci\u00E9t\u00E9, les niveaux pourraient \u00EAtre les suivantes\: sans apprentissage, formation professionnelle, administration...
 admin.licenses.intro=Vous pouvez cr\u00E9er plusieurs types de licence si ceux par d\u00E9faut ne sont pas suffisants. Veuillez noter que les licences par d\u00E9faut ne peuvent pas \u00EAtre supprim\u00E9es.
@@ -19,6 +19,7 @@ delete.level.confirm=Voulez-vous vraiment effacer ce niveau?
 delete.license=Effacer
 delete.license.confirm=Voulez-vous vraiment effacer cette license?
 delete.qustions.without.author=Effacer les questions si l'auteur est effac\u00E9
+delete.qustions.without.author.info=Apr\u00E8s l'effacement d'un utilisateur, celui-ci sera enlever de la liste des auteurs de toutes les questions de la banque. Si l'option en a \u00E9t\u00E9 activ\u00E9e, et que cette personne est l'unique auteur d'une question, la question sera \u00E9galement effac\u00E9e.
 delete.taxonomyLevel=Effacer
 delete.taxonomyLevel.confirm=Voulez-vous vraiment effacer le sujet suivant "{0}"?
 delete.type=Effacer
@@ -43,6 +44,7 @@ level.translation=Traduction
 license.id=ID
 license.key=License
 lower.limit=Limite inf\u00E9rieure des \u00E9valuations positives
+lower.limit.desc=Avec la m\u00E9thode d'\u00E9valuation "Limite inf\u00E9rieure", une question obtiendra le status "$org.olat.modules.qpool.ui\:lifecycle.status.finalVersion" si le nombre minimum d'\u00E9valuation a \u00E9t\u00E9 atteint et que toutes les \u00E9valuations sont sup\u00E9rieures ou \u00E9gales \u00E0 cette limite. Si une \u00E9valuation se situe sous la limite, la question passe imm\u00E9diatement au status "$org.olat.modules.qpool.ui\:lifecycle.status.revised" avant m\u00EAme que le nombre minimal d'\u00E9valuations ne soit atteint.
 lower.limit.provider.name=Limite inf\u00E9rieure
 number.of.ratings=Nombre d'\u00E9valuation par question
 pool.manager.allowed=L'administrateur de la banque de donn\u00E9es peut
@@ -57,6 +59,7 @@ pool.manager.taxonomy=\u00E9diter les param\u00E8tres "$\:segment.taxonomy"
 pools.enabled=Pools
 reset.status=Remettre le status "Brouillon" \u00E0 toutes questions
 review.process.confirm.enable.button=activ\u00E9
+review.process.confirm.enable.description=Il est recommand\u00E9 de r\u00E9initialis\u00E9 tous les status des questions de la banque pour avoir une base uniforme pour d\u00E9buter avec le nouveau processus d'\u00E9valuation.<br><br>Une fois les status r\u00E9initialis\u00E9s, les status pr\u00E9c\u00E9dents ne pourront pas \u00EAtre r\u00E9activ\u00E9s.
 review.process.confirm.enable.title=Activer le processus d'\u00E9valuation
 review.process.enabled=Processus d'\u00E9valuation
 segment.configuration=Banque de questions
