--- a/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Thu Feb 01 22:02:52 CET 2018
+#Fri Feb 02 08:47:45 CET 2018
 QuestionItemImpl=Question
 actions=Actions
 add.competence.have=Ajouter "$\:have"
@@ -18,6 +18,7 @@ assign.type=Attribuer
 atleast.one.competence=Vous devez choisir au moins une comp\u00E9tence que vous pouvez \u00E9diter.
 confirm.delete.level.type.sucessfull=Le type de niveau "{0}" a \u00E9t\u00E9 effac\u00E9.
 confirm.deleted.level=Le niveau "{0}" de la taxonomie a \u00E9t\u00E9 effac\u00E9.
+confirm.merge.level=Les niveaux "{0}" ont \u00E9t\u00E9 fusionn\u00E9s avec succ\u00E8s.
 confirm.removed.competence=La ou les comp\u00E9tences ont \u00E9t\u00E9 effac\u00E9es.
 confirmation.delete.level=Voulez-vous vraiment effacer le niveau "{0}" de la taxonomie?
 confirmation.delete.level.title=Effacer un niveau de la taxonomie
@@ -32,10 +33,20 @@ details.delete=Effacer
 edit.competence.title=Editer la comp\u00E9tence "{1}" de "{0}"
 edit.competences=Editer la comp\u00E9tence
 edit.level.types=Editer le type
+error.delete.num=Les niveaux de la taxonomie contiennent les \u00E9l\u00E9ments suivants\:
+error.delete.num.child.levels=<strong>{0}</strong> sous-niveaux
+error.delete.num.competences=<strong>{0}</strong> relations vers des comp\u00E9tences
+error.delete.num.relations=<strong>{0}</strong> r\u00E9f\u00E9rences \u00E0 des objets didactiques
+error.discontinuous.selection=La s\u00E9lection discontinue de niveaux de la taxonomie n'est pas support\u00E9 pour l'instant.
+error.found.no.allowed.sub.types=Il n'y a aucun type de niveaux dont la configuration est compatible avec la s\u00E9lection.
+error.select.target.level=Vous devez s\u00E9lectionner au moins un niveau de la taxonomie.
 error.sort.order.integer=Num\u00E9ro de tri doit \u00EAtre un chiffre entier.
+error.target.no.parent=Ce niveau de la taxonomie ne peut pas \u00EAtre d\u00E9placer l\u00E0.
+error.target.not.allowed=Ce niveau de la taxonomie ne peut pas \u00EAtre d\u00E9plac\u00E9 l\u00E0 car le type du niveau parent est incompatible avec celui-ci.
 filter.no.level.type=Sans type de niveau
 have=Acquis
 info.copy.level.type.sucessfull=Le type de niveau "{0}" a \u00E9t\u00E9 copi\u00E9.
+info.delete.merge.to=Ces \u00E9l\u00E9ments peuvent \u00EAtre fusionn\u00E9s avec un autre niveau de la taxonomie.
 insert.taxonomy.levels=Ajouter un type de niveau
 level.description=Description
 level.directory.path=Chemin technique
@@ -47,8 +58,11 @@ level.type=Type
 level.type.allowed.sub.types=Sous-types
 level.type.cssClass=Class CSS
 level.type.docs.enabled=Activer le dossier documents
+level.types.to.assign=Types de niveaux
 level.visible=Visible
 manage=G\u00E9rer
+merge.taxonomy.level=Fusionner
+merge.to=Fusionner
 move.taxonomy.level=D\u00E9placer
 move.taxonomy.level.title=D\u00E9placer "{0}"
 move.taxonomy.levels.title=D\u00E9placer
