--- a/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Thu Feb 01 22:06:36 CET 2018
+#Fri Feb 02 08:43:36 CET 2018
 assessment.mode.now=Le mode d'\u00E9valuation est actif.
 assessment.modes.overview=Mode d'\u00E9valuation
 assessment.status.done=$org.olat.modules.assessment.ui\:assessment.status.done
@@ -44,6 +44,7 @@ participantgroups.title=Participant des groupes
 previous=Retour
 reopen=$org.olat.modules.assessment.ui\:reopen
 reset.attempts=R\u00E9initialiser le nombre de tentatives
+reset.attempts.explanation=Ce test a \u00E9t\u00E9 termin\u00E9. Vous pouvez r\u00E9initialiser le nombre de tentatives. Le participant au test recommencera le test depuis le d\u00E9but. Exception faite si vous avez r\u00E9ouvert le test avec la fonction "R\u00E9ouvrir un test d\u00E9j\u00E0 termin\u00E9". Dans ce cas, l'utilisateur pourra reprendre l\u00E0 o\u00F9 il s'est arr\u00EAt\u00E9.<br>Le nombre de tentatives sera mis \u00E0 z\u00E9ro. Les donn\u00E9es de tentatives pr\u00E9c\u00E9dentes resteront sauv\u00E9es de mani\u00E8re ind\u00E9pendantes des nouvelles tentatives.
 save.done=$org.olat.modules.assessment.ui\:save.done
 statistics.small.overview=$org.olat.modules.assessment.ui\:statistics.small.overview
 sub.details=D\u00E9tails
