--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_fr.properties
@@ -1,4 +1,4 @@
-#Thu Feb 01 21:42:55 CET 2018
+#Fri Feb 02 08:26:04 CET 2018
 add=+
 add.to.list=Ajouter \u00E0 la liste
 admin.menu.title=Banque de questions
@@ -95,6 +95,7 @@ export.log.header.title=$\:general.title
 export.log.header.topic=$\:general.topic
 export.log.header.usage=$\:question.usage
 export.log.header.version=$\:lifecycle.version
+export.overview.accept=Pris en compte
 general=G\u00E9n\u00E9ral
 general.additional.informations=Informations additionnelles
 general.additional.informations.long=$\:general.additional.informations
@@ -140,6 +141,7 @@ item.type.unkown=Inconnu
 item.type.upload=T\u00E9l\u00E9verser un fichier
 lifecycle.status=Statut
 lifecycle.status.draft=Ebauche
+lifecycle.status.endOfLife=End of life
 lifecycle.status.finalVersion=Final
 lifecycle.status.last.modified=Dernier changement de statut
 lifecycle.status.review=En cours d'examen
@@ -147,6 +149,7 @@ lifecycle.status.revised=R\u00E9vis\u00E9
 lifecycle.status.unavailable=Indisponible
 lifecycle.version=Version
 list=Listes
+locked.readonly=La question est momentan\u00E9ment ouverte par "{0}". C'est pourquoi vous ne pouvez pas l'\u00E9diter pour l'instant.
 manage.owners=Editer
 mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Favoris"> </i>
 mark.add.to.source=Ajouter les questions aux favoris.
@@ -196,6 +199,7 @@ pool.owners=Propri\u00E9taires
 pool.public=Public
 presentation.title=Banque de questions
 previous=Pr\u00E9c\u00E9dent
+process.activate.locked=La question est momentan\u00E9ment ouverte par "{0}". Le processus d'\u00E9valuation ne peut par cons\u00E9quent pas \u00EAtre d\u00E9marrer pour l'instant.
 process.activate.not.reviewable.description=Les questions au format QTI 1.2 ne peuvent pas \u00EAtre \u00E9valu\u00E9es. Convertissez-les d'abord au format QTI 2.1.
 process.activate.review=Evaluer la question
 process.activate.review.description=La question est pass\u00E9e en revue. V\u00E9rifier attentivement , s'il vous pla\u00EEt, l'exactitude technique et la justesse de la question avant de soumettre votre \u00E9valuation avec le bouton ci-dessous.
@@ -207,9 +211,12 @@ process.endOfLife=End of life
 process.final=Final
 process.rating=Evaluation
 process.rating.button=Evaluer
+process.rating.description=Evaluez la question s'il-vous-pla\u00EEt. Chaque question peut \u00EAtre \u00E9valuer exactement une fois. Apr\u00E8s \u00E9valuation, la question n'appara\u00EEtra plus dans la liste des questions \u00E0 \u00E9valuer.
 process.rating.title=Evaluation
+process.review=Evaluation
 process.revision=R\u00E9vision
 process.start.review.button=$\:process.activate.start.review
+process.start.review.description=Apr\u00E8s le d\u00E9but du processus d'\u00E9valuation, toutes les \u00E9valuations de la question seront effac\u00E9es et la question ne pourra plus \u00EAtre \u00E9dit\u00E9e. Voulez-vous commencer l'\u00E9valuation de la question "{0}"?
 process.start.review.taxonomy.level=$\:general.taxonomy.level
 process.start.review.title=$\:process.activate.start.review
 question=Analyse \u00E9l\u00E9ment
