OO-3179: Dropdown element to start a assignment in the portfolio instead of the list view

--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_en.properties
@@ -337,7 +337,7 @@ shared.with.me=Shared with me
 shared.with.me.text=A list of all items people shared with you.
 show.help.binder=Help
 source=Source
-start.assignment.hint=With a click, you open the editing of the assignment.
+start.assignment.hint=Choose an assignment for editing
 status.closed=closed
 status.deleted=deleted
 status.draft=Draft
