--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_de.properties
@@ -339,7 +339,7 @@ shared.with.me=An mich freigegeben
 shared.with.me.text=Liste aller Mappen, die von anderen Benutzern an Sie freigegeben wurden.
 show.help.binder=Hilfe
 source=Quelle
-start.assignment.hint=Mit einem klick \u00F6ffnen Sie die Aufgabe f\u00FCr die Bearbeitung
+start.assignment.hint=W\u00e4hlen Sie eine Aufgabe zur Bearbeitung
 status.closed=abgeschlossen
 status.deleted=gel\u00F6scht
 status.draft=Entwurf
