no-jira: Wording

--- a/src/main/java/org/olat/modules/forms/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/forms/ui/_i18n/LocalStrings_de.properties
@@ -26,6 +26,6 @@ slider.start=Beginn
 slider.steps=Schritte
 slider.type=Typ
 start.label=Beginn
-textinput.rows=Zeile
+textinput.rows=Zeilen
 title.example=<h1>Anklicken um Titel zu bearbeiten</h1>
-warning.form.not.completed=Achtung! Sie haben nicht alle Felder ausgefüllt.
+warning.form.not.completed=Achtung! Sie haben nicht alle Felder ausgef\u00FCllt.
