--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_de.properties
@@ -183,10 +183,10 @@ image.align.right=Kleines Bild, rechts von Zusammenfassung
 image.align.right.large=Grosses Bild, rechts von Zusammenfassung 
 import.artefactV1=Artefakte importieren
 institution=Institution
-invitation.extern.mail.body=Sie wurden von {2} {3} eingeladen, eine Sammelmappe in OLAT zu betrachten. Sie finden diese unter folgender Adresse\: {0}
+invitation.extern.mail.body=Sie wurden von {2} {3} eingeladen, eine Sammelmappe in OpenOLAT zu betrachten. Sie finden diese unter folgender Adresse\: {0}
 invitation.extern.mail.subject=Einladung zu einer freigegebenen Sammelmappe
 invitation.link=Link
-invitation.mail.body=Sie wurden von {1} eingeladen, eine Sammelmappe in OLAT zu betrachten. Sie finden diese unter folgender Adresse\: {0}
+invitation.mail.body=Sie wurden von {1} eingeladen, eine Sammelmappe in OpenOLAT zu betrachten. Sie finden diese unter folgender Adresse\: {0}
 invitation.mail.failure=Fehler beim Versenden der E-Mail. Die eingeladenen Personen konnten nicht per E-Mail benachrichtigt werden. Versuchen Sie es sp\u00E4ter noch einmal oder kontaktieren Sie den Support.
 invitation.mail.subject=Einladung zu einer freigegebenen Sammelmappe
 invitation.mail.success=Die eingeladenen Personen wurden erfolgreich per E-Mail benachrichtigt.
@@ -208,7 +208,7 @@ map.not.passed=$org.olat.course.assessment\:map.not.passed
 map.not.rated.yet=$org.olat.course.assessment\:map.not.rated.yet
 map.passed=$org.olat.course.assessment\:map.passed
 map.returnDate=$org.olat.course.nodes.portfolio\:map.returnDate
-map.share.with.mail.error.olatUser=Diese E-Mailadresse wird bereits von einem OLAT-Benutzer verwendet.
+map.share.with.mail.error.olatUser=Diese E-Mailadresse wird bereits von einem OpenOLAT-Benutzer verwendet.
 map.template=Portfoliovorlage
 media.center=Mediathek
 media.center.text=Hier k\u00F6nnen Sie Mediendateien, Dokumente oder andere Artefakte hinzuf\u00FCgen. Verwenden Sie die Medien, um Ihre Eintr\u00E4ge zu illustrieren und zu erg\u00E4nzen.
@@ -380,7 +380,7 @@ table.header.open=Start
 table.header.open.sections=Offen
 table.header.passed=Bestanden
 table.header.publication.date=Publiziert am
-table.header.recentLaunch=Letzte Besuch
+table.header.recentLaunch=Letzter Besuch
 table.header.score=Punkte
 table.header.section=Bereich
 table.header.select.sections=Bereiche
@@ -405,7 +405,7 @@ used.in=Verwendet in
 validate.email=E-Mailadresse validieren
 volume=Buchband
 warning.binder.synched=Die Portfolioaufgabe wurde mit ihrer Vorlage synchronisiert.
-warning.evaluation.not.visible.text=Zur zeit ist die Einsch\u00E4tzung nicht sichtbar.
+warning.evaluation.not.visible.text=Zur Zeit ist die Einsch\u00E4tzung nicht sichtbar.
 warning.evaluation.not.visible.title=Einsch\u00E4tzung nicht sichtbar
 warning.portfolio.not.found=Die Portfolio Mappe konnte nicht gefunden werden. Sie wurde wahrscheinlich gel\u00F6scht.
-warning.template.in.use=Die Vorlage konnte nicht gel\u00F6scht werden weil einige Benutzer es nutzt.
+warning.template.in.use=Die Vorlage konnte nicht gel\u00F6scht werden, weil sie von einigen Benutzern in Verwendung ist.
