OO-3214: option to send a confirmation email after booking in a course or a business group

--- a/src/main/java/org/olat/resource/accesscontrol/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/resource/accesscontrol/ui/_i18n/LocalStrings_de.properties
@@ -38,6 +38,7 @@ admin.menu.title.alt=$\:admin.title
 admin.title=Verwaltung der Zugangskontrolle und Buchungsmethoden
 cmd.close=Schliessen
 cmd.title=Zugangskontrolle
+confirmation.email=Best\u00E4tigungsemail f\u00FCr selbst eingetragene Benutzer
 course.closed=$org.olat.course.run\:course.closed
 create=Erstellen
 from=Von\:
