--- a/src/main/java/org/olat/resource/accesscontrol/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/resource/accesscontrol/ui/_i18n/LocalStrings_en.properties
@@ -61,6 +61,7 @@ admin.title=Access control and booking methods administration
 
 cmd.close=Close
 cmd.title=Access control
+confirmation.email=Confirmation email for self-registered users
 course.closed=$org.olat.course.run\:course.closed
 create=Create
 from=From\:
