OO-3220: true/false question type based on the matchInteraction with specific behavior

--- a/src/main/java/org/olat/ims/qti21/questionimport/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/questionimport/_i18n/LocalStrings_en.properties
@@ -17,4 +17,5 @@ item.type.sc=$org.olat.ims.qti.editor\:item.type.sc
 item.type.essay=$org.olat.ims.qti21.ui.editor\:new.essay
 item.type.match=$org.olat.ims.qti21.ui.editor\:new.match
 item.type.matchdraganddrop=$org.olat.ims.qti21.ui.editor\:new.matchdraganddrop
+item.type.matchtruefalse=$org.olat.ims.qti21.ui.editor\:new.matchtruefalse
 error.at.line=Issue with line {0}
