--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_de.properties
@@ -181,6 +181,9 @@ item.session.control.attempts.hint=Diese Einschr\u00E4nkung der L\u00F6sungsvers
 item.session.control.show.solution=L\u00F6sung anzeigen
 item.session.control.show.solution.hint=Beim R\u00FCckblick werden auch L\u00F6sungen angezeigt.
 lifecycle.version=$org.olat.modules.qpool.ui\:lifecycle.version
+match.unanswered=Unbeantwortet
+match.true=Richtig
+match.false=Falsch
 math.operator.bigger=>
 math.operator.biggerEquals=>\=
 math.operator.equals=\=
@@ -208,6 +211,7 @@ new.hottext.text=Hottext
 new.kprim=Kprim
 new.match=Matrix
 new.matchdraganddrop=Drag and Drop
+new.matchtruefalse=True/false
 new.mc=Multiple Choice
 new.rectangle=Viereck
 new.sc=Single Choice
