--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_en.properties
@@ -180,6 +180,9 @@ item.session.control.attempts.hint=This limitation of the attempts is only valid
 item.session.control.show.solution=Show solution
 item.session.control.show.solution.hint=Solution is shown in review as well.
 lifecycle.version=$org.olat.modules.qpool.ui\:lifecycle.version
+match.unanswered=Unanswered
+match.true=Right
+match.false=Wrong
 math.operator.bigger=>
 math.operator.biggerEquals=>\=
 math.operator.equals=\=
@@ -208,6 +211,7 @@ new.hottext.text=text
 new.kprim=Kprim
 new.match=Match
 new.matchdraganddrop=Drag and Drop
+new.matchtruefalse=True/false
 new.mc=Multiple choice
 new.rectangle=Rectangle
 new.sc=Single choice
