--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_fr.properties
@@ -209,6 +209,7 @@ new.hottext.text=texte
 new.kprim=Kprim
 new.match=Match
 new.matchdraganddrop=Drag and Drop
+new.matchtruefalse=True/false
 new.mc=Choix multiples
 new.rectangle=Rectangle
 new.sc=Choix simple
